# prophecypracticum

./: .gitignore  README.md  flask_env.sh  pypi.rst  requirements.txt  setup.cfg
.github/workflows/: linttest.yml
docs/: conf.py  index.rst  requirements.txt
docs/modules/engine/: controller.rst  prophecy.rst  user.rst
prophecypracticum/engine/: controller.py  error.py  prophecy.py  user.py
prophecypracticum/tests/: test_controller.py  test_prophecy.py  test_user.py
prophecypracticum/web/: __init__.py  admin.py  auth.py  db.py  practicum.py  schema.sql
prophecypracticum/web/templates/: base.html
prophecypracticum/web/templates/auth/: login.html  register.html
prophecypracticum/web/templates/practicum/: admin.html  create_prophecy.html  index.html
