[metadata]
name = prophecypracticum
author = Eric Mesa
author-email = eric@ericmesa.com
url = https://github.com/djotaku/prophecypracticum/tree/tests
version = attr: prophecypracticum.__init__.__version__
description =  documentation
long_description = file: pypi.rst
keywords = prophecy
license = GPLv3
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    attr